<resources>
    <string name="app_name">TodoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Lịch</string>
    <string name="todo">Todo</string>
    <string name="account">Tài khoản</string>
    <string name="setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="menu">Menu</string>
    <string name="username">Username</string>
    <string name="or_login_with">Hoặc đăng nhập bằng</string>
    <string name="them_cong_viec">Thêm công việc</string>
    <string name="ten_cong_viec">Tên công việc</string>
    <string name="them_danh_muc">Thêm danh mục</string>
    <string name="ten_danh_muc">Tên danh mục</string>
    <string name="huy">Hủy</string>
    <string name="them_moi">Thêm mới</string>
    <string name="category">Danh mục</string>
    <string name="sua_danh_muc">Sửa danh mục</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="xoa">Xóa</string>

    <string name="facebook_app_id">393900483629456</string>
    <string name="fb_login_protocol_scheme">fb393900483629456</string>
    <string name="facebook_client_token">d6554552259be82751bf27e343a81cad</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="dashboard">Tổng quan</string>
</resources>