<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_nav"
        android:icon="@drawable/icon_menu_outline"
        android:title="@string/menu" />

    <item android:id="@+id/menu_todo"
        android:icon="@drawable/icon_reader_outline"
        android:title="@string/todo" />

    <item android:id="@+id/menu_calendar"
        android:icon="@drawable/icon_calendar_number_outline"
        android:title="@string/calendar" />

    <item android:id="@+id/menu_dashboard"
        android:icon="@drawable/icon_bar_chart_outline"
        android:title="@string/dashboard"/>

    <item android:id="@+id/menu_setting"
        android:icon="@drawable/icon_settings_outline"
        android:title="@string/setting"/>
</menu>