<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@android:color/transparent">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blurOverlayColor="@color/overlayColor"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/blurViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_create_category_popup"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Xác nhận xóa?"
                style="@style/PopupHeader"/>

            <TextView
                android:id="@+id/popup_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#5D5D5D"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/huy"
                    android:background="@drawable/btn_cancel"
                    app:backgroundTint="@null" />
                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xoa"
                    android:background="@drawable/btn_crate"
                    app:backgroundTint="@color/red" />

            </LinearLayout>


        </LinearLayout>

    </eightbitlab.com.blurview.BlurView>

</LinearLayout>