<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/user_no_image"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp" >
                    <TextView
                        android:id="@+id/user_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/app_name"
                        android:textSize="13sp"
                        android:textColor="@color/gray"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>
                <LinearLayout
                    android:id="@+id/editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:padding="3dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="7dp"
                        android:background="@drawable/bg_setting_icon"
                        android:src="@drawable/icon_bx_user_blue"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Thay đổi thông tin"
                            android:textStyle="bold"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Thay đổi hình ảnh, họ tên,..."
                            android:textSize="13sp"
                            android:textColor="@color/gray"
                            android:layout_marginTop="5dp" />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_chevron_forward_outline" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    android:padding="3dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="7dp"
                        android:background="@drawable/bg_setting_icon"
                        android:src="@drawable/icon_bx_lock_alt_blue"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Đổi mật khẩu"
                            android:textStyle="bold"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Thay đổi mật khẩu"
                            android:textSize="13sp"
                            android:textColor="@color/gray"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_chevron_forward_outline" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Khác"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:padding="3dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="7dp"
                        android:background="@drawable/bg_setting_icon"
                        android:src="@drawable/icon_bx_bell_blue"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Thông báo"
                            android:textStyle="bold"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Cài đặt trạng thái thông báo"
                            android:textSize="13sp"
                            android:textColor="@color/gray"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <android.widget.Switch
                        android:id="@+id/notification_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/terms_of_use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    android:padding="3dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="7dp"
                        android:background="@drawable/bg_setting_icon"
                        android:src="@drawable/icon_bx_info_circle_blue"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Điều khoản sử dụng"
                            android:textStyle="bold"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="Điều khoản sử dụng"
                            android:textSize="13sp"
                            android:textColor="@color/gray"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_chevron_forward_outline" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    android:padding="3dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="7dp"
                        android:background="@drawable/bg_setting_icon_red"
                        android:src="@drawable/icon_bx_log_out_red"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="@string/logout"
                            android:textColor="@color/red"
                            android:textStyle="bold"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_chevron_forward_outline" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>